[package]
name = "openvm_issue_report"
version = "0.1.0"
edition = "2024"

[dependencies]
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.2", default-features = false, features = [
  "parallel",
  "evm-prove",
  "tco",
  "unprotected"
] }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.2", default-features = false }
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.2", default-features = false }

# more openvm related libs
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.2" }

eyre = "0.6"
toml = "0.8"
bincode = { version = "2.0", features = ["serde"]}
serde = { version = "1", default-features = false, features = ["derive"]  }
tracing-subscriber = "0.3"

cudarc = { version = "0.9", optional = true }

[features]
cuda = ["openvm-sdk/cuda", "dep:cudarc"]
legacy = ["openvm-sdk/legacy-v1-3"]